--- a/LibriVox/Info.plist
+++ b/LibriVox/Info.plist
@@ -4,6 +4,7 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
+		<string>Prata-Regular.ttf</string>
 		<string>Nunito-VariableFont_wght.ttf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
@@ -20,7 +21,7 @@
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
-					<string>LoginRegister</string>
+					<string>Library</string>
 				</dict>
 			</array>
 		</dict>
